# vstol

./: .gitignore  Cargo.toml  README.md  lint.sh  pyproject.toml  unittest.sh
.github/workflows/: main.yml  pypi-publish.yml  release.yml
examples/: 01_run_vstol_vcf2tsv.sh  02_run_vstol_annotate.sh  02_run_vstol_merge.sh  03_run_vstol_diff.sh  03_run_vstol_filter.sh  04_run_vstol_intersect.sh  05_run_vstol_merge.sh  05_run_vstol_overlap.sh  06_run_vstol_diff.sh  06_run_vstol_overlap.sh  06_run_vstol_subtract.sh  07_run_vstol_annotate.sh  08_run_vstol_collapse.sh  09_run_vstol_tsv2vcf.sh  10_run_vstol_score.sh  11_run_vstol_visualize.sh  run_vstol_annotate.sh  run_vstol_collapse.sh  run_vstol_diff.sh  run_vstol_filter.sh  run_vstol_intersect.sh  run_vstol_merge.sh  run_vstol_overlap.sh  run_vstol_score.sh  run_vstol_tsv2vcf.sh  run_vstol_vcf2tsv.sh
examples/outputs/: colo829-dna-pacbio_savana_classify_output.somatic.chr1.filtered.tsv  colo829-dna-pacbio_savana_classify_output.somatic.chr1.tsv  colo829-dna-pacbio_savana_classify_output.somatic.gencode_annotated.tsv  colo829-dna-pacbio_savana_classify_output.somatic.overlap.chr1.tsv  colo829-hcc1395-dna-pacbio_savana_intersect.chr1.tsv  colo829-hcc1395-dna-pacbio_savana_merge.chr1.tsv  hcc1395-dna-pacbio_savana_classify_output.somatic.chr1.tsv  hg002_cutesv.tsv  hg002_deepvariant.tsv  hg002_hg001_delly2.tsv  hg002_hg001_gatk4_mutect2.tsv  hg002_hg001_lumpy.tsv  hg002_hg001_strelka2_indels.tsv  hg002_hg001_strelka2_snvs.tsv  hg002_intersecting_variants.tsv  hg002_merged_variants.tsv  hg002_merged_variants.vcf  hg002_merged_variants_collapsed.tsv  hg002_merged_variants_passed.tsv  hg002_merged_variants_private.tsv  hg002_merged_variants_rejected.tsv  hg002_pbsv.tsv  hg002_sniffles2.tsv  hg002_sniffles2_ensembl_annotated.tsv  hg002_sniffles2_gencode_annotated.tsv  hg002_sniffles2_overlap.tsv  hg002_sniffles2_private.tsv  hg002_sniffles2_refseq_annotated.tsv  hg002_svim.tsv  sample001.svision_pro_v1.8.s3.tsv  sample001_manta_somatic.tsv  sample001_savana_sv_breakpoints.tsv  sample001_severus_somatic.tsv  sample001_severus_somatic_scored.tsv
python/vstolib/: __init__.py  annotator.py  constants.py  default.py  ensembl.py  gencode.py  genomic_range.py  genomic_ranges_list.py  main.py  metrics.py  refseq.py  utilities.py  variant.py  variant_call.py  variant_call_annotation.py  variant_filter.py  variants_list.py  visualization.py
src/: constants.rs  genomic_range.rs  genomic_ranges_list.rs  interface.rs  lib.rs  metrics.rs  utilities.rs  variant.rs  variant_call.rs  variant_call_annotation.rs  variant_filter.rs  variants_list.rs
test/: conftest.py  data.py  test_annotate.py  test_collapse.py  test_compare.py  test_diff.py  test_filter.py  test_intersect.py  test_merge.py  test_overlap.py  test_score.py  test_subtract.py  test_vcf2tsv.py  test_visualize.py
vstol/: Cargo.toml
vstol/src/: common.rs  constants.rs  lib.rs  metrics.rs
vstol/src/algorithms/: clustering.rs  mod.rs  union_find.rs
vstol/src/structs/: genomic_range.rs  genomic_ranges_list.rs  mod.rs  variant.rs  variant_call.rs  variant_filter.rs  variants_list.rs
vstol/src/tests/: mod.rs  unit_tests_variants_list_compare.rs  unit_tests_variants_list_create.rs  unit_tests_variants_list_filter.rs  unit_tests_variants_list_intersect.rs  unit_tests_variants_list_merge.rs  unit_tests_variants_list_overlap.rs  unit_tests_variants_list_sort.rs  unit_tests_variants_list_subtract.rs
(+308 files in other folders)
