[package]
name = "vstolib"
version = "0.1.9"
edition = "2021"

[package.metadata.maturin]
name = "vstolib.vstolibrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vstolib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
chrono = "0.4"
env_logger = "0.9"
exitcode = "1.1.2"
log = "0.4"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
bam = "0.1.4"
regex = "1.7.0"

[profile.dev]
opt-level = 0

[profile.release]
debug = 0
incremental = true
