[package]
name = "vstolib"
version = "0.3.7"
edition = "2021"

[package.metadata.maturin]
name = "vstolib.vstolibrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vstolib"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
env_logger = "0.9"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vstol = { path = "vstol/", version = "0.3.7" }

[profile.dev]
opt-level = 0

[profile.release]
debug = 0
incremental = true
