# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[build-system]
requires = [
    "maturin>=0.14,<0.15",
    "pandas>=2.0.3",
    "numpy>=1.22.3"
]
build-backend = "maturin"

[project]
name = "vstol"
version = "0.2.2"
requires-python = ">=3.10"
keywords = [
    "somatic variants",
    "structural variants",
    "small variants",
    "variant toolkit",
    "cancer",
    "tumor",
    "dna"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"

[project.scripts]
vstol = "vstolib.cli.cli_main:run"
